welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:6: error: not found: value NoDoubles
		case (die1, noDoubles, die2)  if (NoDoubles==true && die1==die2) => return die1+die2+1
                                                  ^withoutDoubles:7: error: not found: value NoDoubles
		case (die1, noDoubles, die2)  if (NoDoubles==false) => return die1+die2
                                                  ^